# ROS

./: package.xml  setup.py
config/: params.yaml
launch/: controller_launch.py
oakd_roi_detector_interfaces/: CMakeLists.txt  index.html  package.xml
oakd_roi_detector_interfaces/include/: index.html
oakd_roi_detector_interfaces/include/oakd_roi_detector_interfaces/: index.html
oakd_roi_detector_interfaces/src/: index.html
oakd_roi_detector_interfaces/srv/: GetDetections.srv  index.html
scroll_approach_interfaces/: CMakeLists.txt  package.xml
scroll_approach_interfaces/srv/: GetRealScrollSide.srv
scroll_approach_project/: controller_node.py  fake_odom_node.py  package.xml  serial_bridge_node.py  setup.cfg  setup.py
scroll_approach_project/config/: params.yaml
scroll_approach_project/launch/: controller_launch.py
scroll_approach_project/scroll_approach_project/: controller_node.py  deadwheel_bridge_node.py  motor_bridge_node.py  sensor_bridge_node.py
