<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scroll_approach_interfaces</name>
  <version>0.0.1</version>
  <description>ROS 2 interfaces (services, messages) for scroll approach project</description>
  <maintainer email="jetsonnvidia69@gmail.com">maomao</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required to make the package recognized as interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional: if your .srv uses types from std_msgs -->
  <depend>std_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>